tests/fixtures/errors/e0403_nor_of_signed.mimz
// expect: E0403
module M {
  in a: signed[4]
  out y: bit
  y = nor(a)
}
